# flask-email-system

./: .gitignore  LICENSE  README.md  app.py  config.py  main.py  pyproject.toml
app/: __init__.py
app/auth/: __init__.py  login.py  register.py
app/mail/: __init__.py
app/models/: mail_model.py  user_model.py
app/user/: __init__.py
app/utils/: authmanager.py  logger.py
